Convert from using DatatypeConverter to the Java Base64 implementation